20210302  更新顶部树状列表显示

--- a/DM100/ViewControllers/Tools/BDDynamicTree/BDDynamicTreeCell.xib
+++ b/DM100/ViewControllers/Tools/BDDynamicTree/BDDynamicTreeCell.xib
@@ -1,43 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" variant="6xAndEarlier" propertyAccessControl="none" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" variant="6xAndEarlier" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" id="kGl-YC-uGQ" customClass="BDDynamicTreeCell">
-            <rect key="frame" x="0.0" y="0.0" width="343" height="20"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" id="IWS-8Y-KLb" customClass="BDDynamicTreeCell">
+            <rect key="frame" x="0.0" y="0.0" width="343" height="40"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kGl-YC-uGQ" id="1s9-E7-YIv">
-                <rect key="frame" x="0.0" y="0.0" width="343" height="19.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IWS-8Y-KLb" id="4hg-dX-s6a">
+                <rect key="frame" x="0.0" y="0.0" width="343" height="40"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6PA-ye-OYk">
-                        <rect key="frame" x="25" y="1" width="296" height="18"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VDI-xK-LfE">
+                        <rect key="frame" x="98" y="0.0" width="223" height="40"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" systemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_plus.png" id="HSE-5B-98r">
-                        <rect key="frame" x="8" y="6" width="8" height="8"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="tplus.png" translatesAutoresizingMaskIntoConstraints="NO" id="dDz-3Q-QA5">
+                        <rect key="frame" x="10" y="9" width="22" height="22"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="tuser-group.png" translatesAutoresizingMaskIntoConstraints="NO" id="5Rc-6u-Y7E">
+                        <rect key="frame" x="50" y="5" width="30" height="30"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
                 </subviews>
             </tableViewCellContentView>
             <connections>
-                <outlet property="labelTitle" destination="6PA-ye-OYk" id="msC-YT-B8G"/>
-                <outlet property="plusImageView" destination="HSE-5B-98r" id="vkk-WM-5Sp"/>
+                <outlet property="labelTitle" destination="VDI-xK-LfE" id="lYb-xf-NPv"/>
+                <outlet property="plusImageView" destination="dDz-3Q-QA5" id="CSs-NV-zho"/>
+                <outlet property="userImageView" destination="5Rc-6u-Y7E" id="kEl-Sq-XZt"/>
             </connections>
+            <point key="canvasLocation" x="129.71014492753625" y="120.53571428571428"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="icon_plus.png" width="12" height="12"/>
+        <image name="tplus.png" width="200" height="200"/>
+        <image name="tuser-group.png" width="200" height="200"/>
+        <systemColor name="darkTextColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
