20211027 调整设置界面显示模式

--- a/DM100/ViewControllers/LoginViewControllers/LoginViewController.xib
+++ b/DM100/ViewControllers/LoginViewControllers/LoginViewController.xib
@@ -81,7 +81,7 @@
                             <rect key="frame" x="47" y="5" width="192" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits" returnKeyType="next"/>
+                            <textInputTraits key="textInputTraits" returnKeyType="next" secureTextEntry="YES"/>
                         </textField>
                         <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eUB-j7-EFX">
                             <rect key="frame" x="1" y="1" width="38" height="38"/>
