--- a/DM100/ViewControllers/MainMapViewControllers/MainMapViewController.xib
+++ b/DM100/ViewControllers/MainMapViewControllers/MainMapViewController.xib
@@ -25,6 +25,7 @@
                 <outlet property="bt4" destination="HrJ-EB-orG" id="gWH-oP-rgo"/>
                 <outlet property="bt5" destination="aN4-rp-w8Q" id="MnK-py-4vM"/>
                 <outlet property="bt6" destination="YGg-Ym-eGE" id="g8s-DG-KY5"/>
+                <outlet property="bt7" destination="9YM-vX-Y2Z" id="17N-Hi-Vig"/>
                 <outlet property="btChange" destination="V7E-u5-abh" id="Xrm-WX-cuq"/>
                 <outlet property="btimg1" destination="BQw-kj-dBg" id="Lxm-0F-AyR"/>
                 <outlet property="btimg2" destination="vlp-ap-V4X" id="1yC-kK-AHv"/>
@@ -36,6 +37,7 @@
                 <outlet property="btlabel4" destination="JnU-Cr-x2h" id="EvR-3P-g16"/>
                 <outlet property="btlabel5" destination="YM1-M6-AKE" id="2Ch-ik-wFa"/>
                 <outlet property="btlabel6" destination="6ul-ts-Oer" id="RQN-Dl-wuT"/>
+                <outlet property="btlabel7" destination="o3v-wO-G8L" id="1s4-UX-HGJ"/>
                 <outlet property="controlview1" destination="7Yi-rZ-Q7W" id="MPa-LI-8Mu"/>
                 <outlet property="controlview2" destination="knx-uB-JF8" id="2P6-o7-WYg"/>
                 <outlet property="controlview3" destination="W2g-vw-MpN" id="YFH-ca-yah"/>
@@ -518,6 +520,24 @@
                     </subviews>
                     <color key="backgroundColor" red="0.044597861010000003" green="0.26370903150000002" blue="0.53919394759999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </view>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9YM-vX-Y2Z">
+                    <rect key="frame" x="166" y="394" width="70" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o3v-wO-G8L">
+                            <rect key="frame" x="30" y="0.0" width="36" height="30"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="position.png" translatesAutoresizingMaskIntoConstraints="NO" id="mXn-Er-EXv">
+                            <rect key="frame" x="5" y="5" width="20" height="20"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" red="0.044597861010000003" green="0.26370903150000002" blue="0.53919394759999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                </view>
             </subviews>
             <color key="backgroundColor" red="0.26174888559999998" green="0.77512051199999998" blue="0.1881192693" alpha="1" colorSpace="calibratedRGB"/>
             <point key="canvasLocation" x="50.399999999999999" y="465.51724137931041"/>
@@ -547,6 +567,7 @@
         <image name="page2b3.png" width="89" height="89"/>
         <image name="page2b4.png" width="89" height="89"/>
         <image name="pg2ig7.png" width="185.25" height="185.25"/>
+        <image name="position.png" width="64" height="64"/>
         <image name="power.png" width="52" height="52"/>
         <image name="setting.png" width="65" height="65"/>
         <image name="upbt.png" width="84" height="84"/>
